# C-C14

./: CMakeLists.txt  CMakePresets.json  README.md  teste.json
.github/scripts/: send_notification.sh
.github/workflows/: cmake.yml
src/: main.cpp  pessoa.cpp  pessoa.hpp
tests/: test_pessoa.cpp
